# statico

./: .gitignore  Cargo.toml  README.md
src/: args.rs  main.rs  placeholders.rs
src/commands/: init.rs  mod.rs  push.rs
src/config/: global.rs  mod.rs  site.rs
templates/: global_config.toml
