[package]
name = "statico"
description = "A static site uploader"
keywords = ["static site", "uploader", "cli"]
categories = ["command-line-utilities", "network-programming"]
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rosenbergm/statico"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
dirs = "6.0.0"
glob = "0.3.3"
inquire = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"
